Commit 2 - Application Title

--- a/githubProgrammingLanguage/indexTest.html
+++ b/githubProgrammingLanguage/indexTest.html
@@ -4,7 +4,7 @@
 	    <meta charset="utf-8">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
-	    <title>GitHub Programming Language</title>
+	    <title>Search GitHub Users Programming Languages</title>
 	
 	    <!-- Bootstrap core CSS, jQuery -->
 	    <link href="https://bootswatch.com/simplex/bootstrap.min.css" rel="stylesheet">
@@ -18,14 +18,12 @@
 	    <script src="js/gitHub.js"></script>
 	    <script src="js/view.js"></script>
 		<script src="js/test.js"></script>
-		
-		
-  	</head>
+	</head>
 
   	<body>
 		<div class="container">
 	      	<div class="searchContainer">
-		        <h1>Search Users Programming Language </h1>
+		        <h1>Search GitHub Users Programming Languages</h1>
 		       	<p class="lead" >Enter a username to fetch the best guess of the GitHub user's favourite programming language</p>
 		        <input type="text" id="searchUser" class="form-control" placeholder="Github Username...">
 	    	</div>
