Comment 3 - Test suites definition

--- a/githubProgrammingLanguage/indexTest.html
+++ b/githubProgrammingLanguage/indexTest.html
@@ -4,7 +4,7 @@
 	    <meta charset="utf-8">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
-	    <title>Search GitHub Users Programming Languages</title>
+	    <title>Test Mode - Search GitHub Users Programming Languages </title>
 	
 	    <!-- Bootstrap core CSS, jQuery -->
 	    <link href="https://bootswatch.com/simplex/bootstrap.min.css" rel="stylesheet">
@@ -23,13 +23,13 @@
   	<body>
 		<div class="container">
 	      	<div class="searchContainer">
-		        <h1>Search GitHub Users Programming Languages</h1>
+		        <h1>Test Mode - Search GitHub Users Programming Languages</h1>
 		       	<p class="lead" >Enter a username to fetch the best guess of the GitHub user's favourite programming language</p>
-		        <input type="text" id="searchUser" class="form-control" placeholder="Github Username...">
+		        <input type="text" id="searchUser" class="form-control" placeholder="Github Username..." readonly>
 	    	</div>
 	      	<br>
-	      	<div id="profile"></div>
-	      	<div id="repos"> </div>
+	      	<br>
+	      	<br>
 		</div>
 		
 		<!-- QUnit box --> 
